<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_border_4"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@drawable/bg_round_border_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_fault_type_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fault_type_1"

            android:textColor="@color/white"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray14" />

        <TextView
            android:id="@+id/tv_fault_type_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fault_type_2"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray14" />

        <TextView
            android:id="@+id/tv_fault_type_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fault_type_3"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray14" />

        <TextView
            android:id="@+id/tv_fault_type_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fault_type_4"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>