<?xml version="1.0" encoding="utf-8"?>
<com.kehui.www.testapp.ui.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_seek_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_seek_device"
    android:orientation="vertical"
    tools:context="com.kehui.www.testapp.view.SeekDeviceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_seek_device_logo" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/app_name2"
            android:textColor="@color/blue2"
            android:textSize="26dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/company_name2"
            android:textColor="@color/blue2"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/ic_mark" />


        <Button
            android:id="@+id/bt_seek_device"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/btn_find_bluetooth_selector"
            android:onClick="clickSeekdevice"
            android:text="@string/Find_a_Bluetooth_device"
            android:textColor="@color/blue2"
            android:textSize="14dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="12%"></LinearLayout>
</com.kehui.www.testapp.ui.PercentLinearLayout>
