<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/lightlightgray">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7.0dip"
            android:layout_marginTop="2.0dip"
            android:background="@drawable/return_back"
            android:visibility="invisible"
        />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10.0dip"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_relative">

        <LinearLayout
            android:id="@+id/unit_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/app_icon"
            />
            <RelativeLayout
                android:id="@+id/more_page_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:clickable="true"
            >


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:text="@string/version_code"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_mingcheng"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:clickable="true"
            >


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_mingcheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:text="@string/t_506"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_gongsimingcheng"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:clickable="true"
            >


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_gongsimingcheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:text="@string/company_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_gongsiwangzhi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:clickable="true"
            >


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tv_gongsiwangzhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:text="@string/company_website"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
